<resources>
    <string name="app_name">Hanashi</string>
    <string name="maps">Peta</string>
    <string name="logout">Keluar</string>
    <string name="img_story">Foto Cerita</string>
    <string name="name">Nama</string>
    <string name="date">Tanggal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="please_add_your_username">Silakan masukkan username Anda</string>
    <string name="username_empty">Username tidak boleh kosong, mohon untuk diisi!</string>
    <string name="reg_greeting">Silakan Daftar</string>
    <string name="reg_greeting_note">Harap untuk mengisi dengan benar!</string>
    <string name="username">Username</string>
    <string name="please_add_your_email">Silakan masukkan email Anda</string>
    <string name="email_empty">Email tidak boleh kosong, mohon untuk diisi!</string>
    <string name="email_format">Harap masukkan email dengan benar</string>
    <string name="please_enter_your_password">Silakan masukkan password Anda</string>
    <string name="password_wrong">Password Anda salah!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="login_here">Masuk Disini</string>
    <string name="log_greeting">Selamat Datang</string>
    <string name="log_note">Harap masuk terlebih dahulu</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="reg_here">Daftar disini</string>
    <string name="login">Masuk</string>
    <string name="the_story_empty_cant_load">Tidak ada cerita yang dapat dimuat...</string>
    <string name="fab_add">fab add</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Deskripsi</string>
    <string name="max_150_word">Maksimal 150 kata</string>
    <string name="add">Tambahkan</string>
    <string name="welcome_to_hanashi">Selamat Datang di Hanashi</string>
    <string name="email_pass_wrong">Email atau Password anda salah</string>
    <string name="please_fill_all_column">Harap isi semua kolom</string>
    <string name="reg_succees">Akun berhasil didaftarkan</string>
    <string name="reg_failed">Anda gagal mendaftarkan akun</string>
    <string name="map">Peta</string>
    <string name="load_map_style_failed">Gagal memuat Custom Map</string>
    <string name="cannot_find_map_style">"Tidak bisa menumukan style map. Error: "</string>
    <string name="loading">Memuat...</string>
    <string name="map_load_success">Map berhasil dimuat</string>
    <string name="map_load_failed">Map gagal dimuat</string>
    <string name="story">Cerita</string>
    <string name="story_load_success">Cerita berhasil dimuat</string>
    <string name="story_load_failed">Cerita gagal dimuat</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="permission_denied">Tidak mendapatkan perizinan aplikasi</string>
    <string name="chosse_img">Pilih gambar</string>
    <string name="max_word">Maksimal 150 kata</string>
    <string name="desc_null">Deskripsi tidak boleh kosong</string>
    <string name="warning">Pemberitahuan!!!</string>
    <string name="warning_message">Apakah Anda yakin menambahkan Cerita ini?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="add_story_success">Cerita berhasil ditambahkan</string>
    <string name="add_story_failed">Cerita gagal ditambahkan</string>
</resources>