<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LogActivity"
    android:background="?attr/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/app_name"
            android:textColor="?attr/boldText"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="?attr/boldText"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/log_greeting"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvSubWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/regularText"
            android:textStyle="normal"
            android:textSize="20sp"
            android:text="@string/log_note"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSubWelcome"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="?attr/boldText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/email"/>

        <com.aji.hanashi.ui.customviews.EmailView
            android:id="@+id/cvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cvEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="?attr/boldText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/password"/>

        <com.aji.hanashi.ui.customviews.PassView
            android:id="@+id/cvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/tvPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cvPass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/noteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="?attr/regularText"
                android:text="@string/dont_have_an_account"/>

            <TextView
                android:id="@+id/regHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/noteText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/product_sans_regular"
                android:textColor="?attr/boldText"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/reg_here"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="@color/material_blue"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:progressBarStyle"
        android:indeterminate="true"
        app:indicatorSize="60dp"
        app:trackThickness="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>